[package]
name = "hashlab-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1.5"
hex = "0.4"
# Encoding
base64 = "0.21"
urlencoding = "2.1"
# Symmetric crypto (CBC, ECB, CTR)
aes = "0.8"
des = "0.8"
cbc = "0.1"
ctr = "0.9"
rc4 = "0.1"
chacha20 = "0.9"
getrandom = { version = "0.2", features = ["js"] }
# Key derivation
pbkdf2 = "0.12"
# Image processing and steganography
image = { version = "0.24", default-features = false, features = ["png"] }
aes-gcm = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1